# bidpanion

./: .gitignore  Dockerfile  README.md  config.py  config__old.py  docker-compose.yml  entrypoint.sh  evaluate.py  instructions.md  main.py  parsing_module.py  pyproject.toml  recalculate_fit_score.py  requirements.txt  serve_data.py  validatied_for_testing.json  validation.txt
extraction/: extractor.py  reranker.py
ingestion/: chunker.py  table_reconstructor.py
input/: 2024-07 WienIT GmbH - RV IT-Consulting_merged.txt  2024-08 DAK - B-&UL f. IT-Mgmt-Beratung_merged.txt  2024_07_BG_Phoenics___RV_UL_im_Gescha_ftsbereich_PM__PS__Los_1_3.txt
new_config/: config.py  config_trimmed.py
temporal/: activities.py  run_workflow.py  worker.py  workflows.py
vectorstore/: bm25_index.py  fusion.py  store.py
viewer/: index.html  package.json  vite.config.js
viewer/src/: App.jsx  index.css
