[project]
name = "bidpanion"
version = "0.1.0"
description = "High-fidelity RAG pipeline for tender extraction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.2.0",
    "langchain-google-vertexai>=1.0.0",
    "langchain-chroma>=0.1.0",
    "chromadb>=0.5.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "google-cloud-aiplatform>=1.50.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.7.0",
    "langfuse>=2.40.0",
    "tqdm>=4.66.0",
]

[tool.uv]
managed = true
